--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@realm/react": "^0.4.1",
     "deprecated-react-native-prop-types": "^2.3.0",
     "patch-package": "^6.5.0",
     "react": "18.1.0",
